[gd_scene load_steps=7 format=3 uid="uid://dunbwsblhvliw"]

[ext_resource type="Script" path="res://scripts/totem.gd" id="1_cfflb"]
[ext_resource type="Texture2D" uid="uid://djsyttmbecxg1" path="res://assets/sprites/level_objects/totem.png" id="1_vyggg"]
[ext_resource type="Texture2D" uid="uid://hclysltu725h" path="res://assets/sprites/level_objects/totem_activated.png" id="2_4bkvp"]

[sub_resource type="Gradient" id="Gradient_jfvsb"]
colors = PackedColorArray(0.427451, 0.917647, 0.839216, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_kc0vw"]
gradient = SubResource("Gradient_jfvsb")
width = 48
height = 48
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.9, 0.9)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_aj08c"]
size = Vector2(16, 24)

[node name="totem" type="Area2D"]
script = ExtResource("1_cfflb")

[node name="TotemSprite" type="Sprite2D" parent="."]
position = Vector2(0, -12)
texture = ExtResource("1_vyggg")

[node name="ActivatedTotemSprite" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, -16)
texture = ExtResource("2_4bkvp")

[node name="TotemLight" type="PointLight2D" parent="."]
visible = false
position = Vector2(0, -12)
scale = Vector2(0.765625, 0.78125)
texture = SubResource("GradientTexture2D_kc0vw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -12)
shape = SubResource("RectangleShape2D_aj08c")

[node name="SpellSprite" type="Sprite2D" parent="."]
position = Vector2(0, -29)
